# puby

./: .coverage  .env  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DESIGN.md  README.md  fpm.toml  pyproject.toml
app/: main.f90
puby/: __init__.py  author_utils.py  base.py  bibtex_parser.py  cli.py  client.py  constants.py  env.py  http_session.py  http_utils.py  legacy_sources.py  matcher.py  models.py  orcid_source.py  pure_source.py  reporter.py  scholar_source.py  similarity_utils.py  sources.py  utils.py  zotero_source.py
puby/commands/: __init__.py  check.py  fetch.py  utils.py
src/: puby.f90  puby_cli.f90  puby_curl.f90  puby_http.f90  puby_types.f90
test/: test_cli.f90  test_http.f90
tests/: __init__.py  test_api_key_honesty.py  test_api_key_validation.py  test_author_utils.py  test_bibtex_export.py  test_cli.py  test_cli_internals.py  test_env_support.py  test_http_session.py  test_http_utils.py  test_init_exports.py  test_matcher.py  test_models.py  test_models_extended.py  test_orcid_parser.py  test_pure_source.py  test_reporter.py  test_scholar_source.py  test_similarity_utils.py  test_source_connection_pooling.py  test_utils.py  test_zotero_source.py
